<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Status.StatusFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/camera"
        app:fabSize="auto"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_round_camera_alt_24"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        app:layout_constraintEnd_toEndOf="@id/camera"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/camera"
        app:fabSize="mini"
        android:src="@drawable/ic_round_create_24"
        app:layout_constraintBottom_toTopOf="@id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
<androidx.core.widget.NestedScrollView
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_margin="@dimen/_10sdp"
            android:id="@+id/circle_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/mmmm1"
            />
        <TextView
            android:id="@+id/tv_name"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/circle_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mohamed_maher"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="#000"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            android:text="@string/my_statue"
            android:textSize="@dimen/_13sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

          <ImageView
              android:padding="@dimen/_2sdp"
              android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/border"
              app:layout_constraintBottom_toBottomOf="@id/circle_image"
              app:layout_constraintStart_toStartOf="parent"
              android:src="@drawable/ic_round_add_24"
              android:layout_width="@dimen/_23sdp"
              android:layout_height="@dimen/_23sdp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:id="@+id/tv_status"
            android:padding="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_statues"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@id/cl2" />
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/rv_constraint_layout"
    app:layout_constraintTop_toBottomOf="@id/tv_status"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/rv_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_status"
        android:orientation="vertical"
        app:spanCount="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>