<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chats.Chatting_Screen">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_layout_Top"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:padding="@dimen/_5sdp"
    android:background="#727585"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:onClick="arrowBack"
        android:id="@+id/arrow"
        app:layout_constraintTop_toTopOf="@id/circle_image"
        app:layout_constraintBottom_toBottomOf="@id/circle_image"
        app:layout_constraintStart_toStartOf="@id/cl_layout_Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_arrow_back_24"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_image"
        app:layout_constraintTop_toTopOf="@id/cl_layout_Top"
        app:layout_constraintStart_toEndOf="@id/arrow"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/mmmm1"/>

    <ImageView
        android:id="@+id/more_ver"
        app:layout_constraintEnd_toEndOf="@id/cl_layout_Top"
        app:layout_constraintTop_toTopOf="@id/circle_image"
        app:layout_constraintBottom_toBottomOf="@id/circle_image"
        android:src="@drawable/ic_baseline_more_vert_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:rotationY="180"
        android:id="@+id/call"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@+id/more_ver"
        app:layout_constraintTop_toTopOf="@id/circle_image"
        app:layout_constraintBottom_toBottomOf="@id/circle_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_local_phone_24"/>
    <ImageView
        android:rotationX="180"
        android:rotationY="180"
        android:id="@+id/Video_Call"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@+id/call"
        app:layout_constraintTop_toTopOf="@id/circle_image"
        app:layout_constraintBottom_toBottomOf="@id/circle_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_videocam_24"
        />
<TextView
    android:id="@+id/user_name"
    android:layout_margin="@dimen/_5sdp"
    app:layout_constraintStart_toEndOf="@id/circle_image"
    android:textColor="@color/white"
    app:layout_constraintTop_toTopOf="@id/circle_image"
    app:layout_constraintBottom_toBottomOf="@id/circle_image"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:maxLines="1"
    android:ellipsize="end"
    android:text="@string/user_name"
    android:textSize="@dimen/_18sdp"
    />
    <TextView
        android:layout_margin="@dimen/_5sdp"
        android:id="@+id/Active"
        app:layout_constraintStart_toEndOf="@id/circle_image"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintBottom_toBottomOf="@id/circle_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/last_active_is_5_00_pm"
        android:textSize="@dimen/_15sdp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bottom"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:paddingStart="@dimen/_35sdp"
            android:paddingEnd="@dimen/_35sdp"
            android:id="@+id/ed_texting"
            android:layout_margin="@dimen/_3sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/mice"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/button_shape"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/texting"
            android:textColorHint="#727585"
            android:textSize="@dimen/_18sdp"

            />

        <ImageView
            android:id="@+id/mice"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/mic_shape"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_round_mic_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <ImageView
            android:id="@+id/camera"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@id/ed_texting"
            app:layout_constraintTop_toTopOf="@id/ed_texting"
           app:layout_constraintBottom_toBottomOf="@id/ed_texting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round_camera_alt_24"
             />
        <ImageView
            app:layout_constraintEnd_toStartOf="@id/camera"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/ed_texting"
            app:layout_constraintBottom_toBottomOf="@id/ed_texting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_attach_file_24" />
        <ImageView
            android:id="@+id/emoji"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@id/ed_texting"
            app:layout_constraintTop_toTopOf="@id/ed_texting"
            app:layout_constraintBottom_toBottomOf="@id/ed_texting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round_emoji_emotions_24"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
<androidx.recyclerview.widget.RecyclerView
    app:layout_constraintTop_toBottomOf="@id/cl_layout_Top"
    app:layout_constraintBottom_toTopOf="@id/layout_bottom"
    android:layout_width="match_parent"
    android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>